minio-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webui
  namespace: minio-ocp
  labels:
    app: minio
spec:
  host: webui-minio-ocp.apps.onpremises.example.com
  to:
    kind: Service
    name: minio-webui
    weight: 100
  port:
    targetPort: webui
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: s3
  namespace: minio-ocp
  labels:
    app: minio
spec:
  host: s3-minio-ocp.apps.onpremises.example.com
  to:
    kind: Service
    name: minio-api
    weight: 100
  port:
    targetPort: api
  wildcardPolicy: None
